Correction centrage localisation mobile

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -332,7 +332,7 @@ button:hover {
 }
 .localisation .fa-location-dot {
   padding-right: 15px;
-  margin-left: 20%;
+  margin-left: 23%;
 }
 
 /*Description Ohmyfood*/
