--- a/style/sass/pages/_index.scss
+++ b/style/sass/pages/_index.scss
@@ -25,7 +25,7 @@
     }
     .fa-location-dot{
         padding-right: 15px;
-        margin-left: 20%;
+        margin-left: 23%;
     }
 }
 
